# minecraft

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: Batch.hpp  Buffer.hpp  Config.hpp  Core.hpp  Device.hpp  File.hpp  Input.hpp  Math.hpp  Mesh.hpp  OpenGL.h  Shader.hpp  Texture.hpp  Utils.hpp  stb_image.h  stb_image_write.h
core/src/: Batch.cpp  Buffer.cpp  Device.cpp  File.cpp  Input.cpp  Mesh.cpp  OpenGL.cpp  Shader.cpp  Texture.cpp  Utils.cpp  pch.h
main/: CMakeLists.txt
main/include/: pch.h
main/src/: Camera.hpp  Scene.cpp  Scene.hpp  main.cpp
